Fix event form input overlapping

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -118,7 +118,10 @@ a [class^="icon-"]:before, a [class*=" icon-"]:before {
     border-radius: 0.3em 0px 0px 0.3em;
     display: inline-block;
     padding: 3px;
-    width: 50%;
+    width: 40%;
+    @media @x-large {
+        width: 50%;
+    }
 }
 #EventSearchForm {
     @media @x-large {
